--- a/vignettes/hgdp.Rmd
+++ b/vignettes/hgdp.Rmd
@@ -40,9 +40,9 @@ The results of PCA applied to the quality controlled dataset are stored in a lon
 Here we see that samples are grouped by country of origin.
 
 ```{r}
-ggplot_pca(snpclust_object$pca, 'population', ellipses = TRUE)
-plot_pca_pairs(1:3, snpclust_object$pca, 'population')
-plot_pca_pairs(4:6, snpclust_object$pca, 'population')
+ggplot_pca(qb_pcafort = snpclust_object$pca, groups = 'population', ellipses = TRUE)
+plot_pca_pairs(axes = 1:3, qb_pcafort = snpclust_object$pca, groups = 'population')
+plot_pca_pairs(axes = 4:6, qb_pcafort = snpclust_object$pca, groups = 'population')
 ```
 
 # SNPs contributions to Principal Components (PCs)
@@ -67,7 +67,7 @@ ggplot_selection(l_peaks = snpclust_object$peaks, df_pca = snpclust_object$pca)
 When PCA is applied on the SNPClust selected dataset, samples are not grouped by geographic origin anymore.
 
 ```{r}
-ggplot_pca(snpclust_object$features_pca, 'population', ellipses = TRUE)
-plot_pca_pairs(1:3, snpclust_object$features_pca, 'population')
-plot_pca_pairs(4:6, snpclust_object$features_pca, 'population')
+ggplot_pca(qb_pcafort = snpclust_object$features_pca, groups = 'population', ellipses = TRUE)
+plot_pca_pairs(axes = 1:3, qb_pcafort = snpclust_object$features_pca, groups = 'population')
+plot_pca_pairs(axes = 4:6, qb_pcafort = snpclust_object$features_pca, groups = 'population')
 ```
