--- a/vignettes/hgdp.Rmd
+++ b/vignettes/hgdp.Rmd
@@ -41,8 +41,8 @@ Here we see that samples are grouped by country of origin.
 
 ```{r}
 ggplot_pca(pca = snpclust_object$pca, groups = 'population', ellipses = TRUE)
-plot_pca_pairs(axes = 1:3, pca = snpclust_object$pca, groups = 'population')
-plot_pca_pairs(axes = 4:6, pca = snpclust_object$pca, groups = 'population')
+plot_pca_pairs(seq_axes = 1:3, pca = snpclust_object$pca, groups = 'population')
+plot_pca_pairs(seq_axes = 4:6, pca = snpclust_object$pca, groups = 'population')
 ```
 
 # SNPs contributions to Principal Components (PCs)
@@ -68,6 +68,8 @@ When PCA is applied on the SNPClust selected dataset, samples are not grouped by
 
 ```{r}
 ggplot_pca(pca = snpclust_object$features_pca, groups = 'population', ellipses = TRUE)
-plot_pca_pairs(axes = 1:3, pca = snpclust_object$features_pca, groups = 'population')
-plot_pca_pairs(axes = 4:6, pca = snpclust_object$features_pca, groups = 'population')
+plot_pca_pairs(seq_axes = 1:3, pca = snpclust_object$features_pca,
+  groups = 'population')
+plot_pca_pairs(seq_axes = 4:6, pca = snpclust_object$features_pca,
+  groups = 'population')
 ```
